# opl-data

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Makefile  Neilside_Barbell.html  README.md  entries.csv  shauns_gainz  standardise_ageclass
2102/: entries.csv  meet.csv
automator/: Cargo.toml
automator/src/: lifter_requests.rs  main.rs  webhooks.rs
checker/: Cargo.toml
checker/src/: check_entries.rs  lib.rs  main.rs  meetdata.rs  report.rs  report_count.rs
checker/tests/: entries.rs
disambiguator/: Cargo.toml  mod.rs
disambiguator/src/: group_age.rs  main.rs
docs/: Powerlifting Federation Instagram and Facebook Info.csv  project-setup-mac-os.md  social-media.md
lifter-data/: birthdates.csv  birthdays.csv  donator-colors.csv  exemptions.toml  flair.csv  name-disambiguation.csv  privacy.csv  se-exemptions.csv  social-instagram.csv  social-vkontakte.csv  supporter-colors.csv
meet-data/: meet.csv  standardise_ageclass
meet-data/aap/: aap-probe
meet-data/adfpf/: CONFIG.toml
meet-data/aep/: CONFIG.toml
meet-data/africanpf/: CONFIG.toml
meet-data/amp/: original.csv
meet-data/apa/: INFO
scripts/: allpowerlifting-import  avg-bw-time.py  bw-analysis.py  calc-latin-names  check-bw-sanity.py  coefficient.py  compile  compile-sqlite  csv-backfill-ages  csv-interpolate-ages  distance_calc  interpolate_ages.py  interpolate_countries.py  oplcsv.py  oplprobe.py  sort-name-corrections  usernames.py
server/: Cargo.toml  Makefile
tests/: check-entries-csv  check-lifter-data  check-meet-csv  check-sex-consistency
web/: make-openpowerlifting-js
(+7006 files in other folders)
