[package]
name = "disambiguator"
version = "0.1.0"
authors = ["Matthew Pearce <matthew.pearce10@gmail.com>"]
description = "The OpenPowerlifting data format disambiguator."
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
coefficients = { version = "0.1", path = "../modules/coefficients/" }
opltypes = { version = "0.1", path = "../modules/opltypes/" }
colored = "2.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
